--- a/src/components/Movies/Movies.module.scss
+++ b/src/components/Movies/Movies.module.scss
@@ -30,9 +30,10 @@
 }
 .list {
   list-style: none;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 10px;
+  column-gap: 30px;
   padding: 0;
 
   .item {
@@ -43,12 +44,25 @@
 }
 
 .link {
+  position: relative;
   color: black;
 
   text-decoration: none;
   text-transform: uppercase;
 
   &:hover {
+    color: orange;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  span {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: #282c34;
     color: orange;
   }
 }
