--- a/src/pages/MoviesSearchPage/Movies.module.scss
+++ b/src/pages/MoviesSearchPage/Movies.module.scss
@@ -1,6 +1,3 @@
-.container {
-}
-
 .form {
   display: flex;
   flex-direction: row;
@@ -27,7 +24,13 @@
       color: orange;
     }
   }
+
+  button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 }
+
 .list {
   list-style: none;
   display: grid;
